--- a/frontend/src/components/Header/index.css
+++ b/frontend/src/components/Header/index.css
@@ -5,12 +5,12 @@
     padding: 5px 20px;
   }
   
-  .main-nav a {
+  .main-nav Link {
     font-weight: bold;
     color: #2c3e50;
   }
   
-  .main-nav a.router-link-exact-active {
+  .main-nav Link.router-link-exact-active {
     color: #42b983;
   }
   
@@ -45,4 +45,8 @@
     position: absolute !important;
     width: 1px !important;
     white-space: nowrap !important; /* 3 */
+  }
+
+  .i-padding{
+    padding-right: 5px;
   }
